<resources>
    <string name="app_name">KonkeruzGalaxuuuuBlast-III</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="image_du_batiment">image du batiment</string>
    <string name="imagesDir">imagesDir</string>
    <string name="btc">Bitcoin</string>
    <string name="eth">Ethereum</string>
    <string name="planet_desc">planet image</string>
    <string name="btc_desc">btc description</string>
    <string name="planetsss">Ma Big Planet</string>
    <string name="batiment_en_cours">Batiment en Cours</string>
    <string name="recherche_en_cours">Recherche en Cours</string>
    <string name="vaisseau_en_cours">Vaisseau en Cours</string>
    <string name="defense_en_cours">defense en Cours</string>
    <string name="goToPlanet">Go to Planet</string>
    <string name="descBtc">imageBtc</string>
    <string name="descEth">descEth</string>
    <string name="all_my_planet">All my planet</string>
    <string name="les_vols_en_cours">Les Vols En Cours !!!</string>
    <string name="generique_description">generique description</string>
    <string name="not_here">not here</string>
    <string name="zero">0</string>
</resources>
